--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44317,7 +44317,7 @@ table.table-bordered thead tr th p {
   padding: 4px 6px;
   color: #fff;
   font-size: 11px;
-  background-color: #006666;
+  background-color: #2A3650;
   border: 1px solid rgba(255, 255, 255, 0.6);
 }
 [dir=rtl] .page-wrapper.compact-wrapper .page-body-wrapper div.sidebar-wrapper .sidebar-main .sidebar-list i.fa-thumb-tack {
