Dasboard icon change

--- a/assets/css/font-awesome.css
+++ b/assets/css/font-awesome.css
@@ -813,7 +813,7 @@
   content: "\f0e3";
 }
 .fa-dashboard:before,
-.fa-tachometer:before {
+.fa-bar-chart:before {
   content: "\f0e4";
 }
 .fa-comment-o:before {
