--- a/assets/css/dev-style.css
+++ b/assets/css/dev-style.css
@@ -52,3 +52,10 @@
     object-fit: cover;
     width: 100%;
   }
+td,
+th{
+    text-align: center;
+  }
+.custom-padding{
+ padding: 6px 15px 6px 15px; 
+} 
